@@ -57,6 +57,7 @@ LastFmServiceSettings::LastFmServiceSettings( QWidget *parent, const QVariantLis
     connect( m_configDialog->kcfg_RetrieveSimilarArtists, SIGNAL( stateChanged( int ) ), this, SLOT( settingsChanged() ) );
     connect( m_configDialog->kcfg_ScrobbleComposer, SIGNAL( stateChanged( int ) ), this, SLOT( settingsChanged() ) );
     connect( m_configDialog->kcfg_UseFancyRatingTags, SIGNAL(stateChanged(int)), this, SLOT(settingsChanged()) );
+    connect( m_configDialog->kcfg_AnnounceCorrections, SIGNAL(stateChanged(int)), this, SLOT(settingsChanged()) );
     connect( m_configDialog->testLogin, SIGNAL( clicked() ), this, SLOT( testLogin() ) );
 
     load();
@@ -77,6 +78,7 @@ LastFmServiceSettings::save()
     m_config.setFetchSimilar( m_configDialog->kcfg_RetrieveSimilarArtists->isChecked() );
     m_config.setScrobbleComposer( m_configDialog->kcfg_ScrobbleComposer->isChecked() );
     m_config.setUseFancyRatingTags( m_configDialog->kcfg_UseFancyRatingTags->isChecked() );
+    m_config.setAnnounceCorrections( m_configDialog->kcfg_AnnounceCorrections->isChecked() );
     m_config.save();
 
     KCModule::save();
@@ -184,6 +186,7 @@ LastFmServiceSettings::load()
     m_configDialog->kcfg_RetrieveSimilarArtists->setChecked( m_config.fetchSimilar() );
     m_configDialog->kcfg_ScrobbleComposer->setChecked( m_config.scrobbleComposer() );
     m_configDialog->kcfg_UseFancyRatingTags->setChecked( m_config.useFancyRatingTags() );
+    m_configDialog->kcfg_AnnounceCorrections->setChecked( m_config.announceCorrections() );
 
     if( !m_config.username().isEmpty() && !m_config.password().isEmpty() )
         m_configDialog->kcfg_SubmitPlayedSongs->setEnabled( true );
@@ -201,6 +204,7 @@ LastFmServiceSettings::defaults()
     m_configDialog->kcfg_RetrieveSimilarArtists->setChecked( m_config.fetchSimilar() );
     m_configDialog->kcfg_ScrobbleComposer->setChecked( m_config.scrobbleComposer() );
     m_configDialog->kcfg_UseFancyRatingTags->setChecked( m_config.useFancyRatingTags() );
+    m_configDialog->kcfg_AnnounceCorrections->setChecked( m_config.announceCorrections() );
 }
 
 
